# prefect-custom-docker

./: .gitignore  Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml  requirements.txt
.github/workflows/: pr.yml  release.yml
examples/: Makefile  prefect.yaml
src/prefect_custom_docker/: proxy.py
tests/: test_proxy.py
